// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Book Donation Screen Fetching 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root-29 MuiIconButton-root-0 rightButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-8"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root-9"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root-29 MuiIconButton-root-0 login"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-8"
        >
          <p
            className="login_text"
          >
            כניסה
          </p>
          <img
            alt="התחבר"
            src="profile-icon.svg"
          />
        </span>
      </button>
    </div>
    <div
      className="bookDonationScreen content"
    >
      <div
        className="welcomeBox"
      >
        <div
          className="welcomeTitle"
        >
          <div
            className="name"
          >
            היי
             משה
          </div>
          <div
            className="welcomeText"
          >
            איזה כיף שבאת!
            <br />
            מתי יתאים לך לתרום?
          </div>
        </div>
        <img
          alt="illustration"
          src="home page-illustration.png"
        />
      </div>
      <div
        className="dropdownContainer"
      >
        <div
          className="MuiFormControl-root-31 makeStyles-root-0"
        >
          <label
            className="MuiFormLabel-root-47 MuiInputLabel-root-35 MuiInputLabel-formControl-41 MuiInputLabel-animated-44 MuiInputLabel-shrink-43 MuiFormLabel-filled-52"
            data-shrink={true}
          >
            הצג תורים ב:
          </label>
          <div
            className="MuiInputBase-root-69 MuiInput-root-55 MuiInput-underline-60 dropdown MuiInputBase-disabled-72 MuiInput-disabled-58 MuiInputBase-formControl-70 MuiInput-formControl-56"
            onClick={[Function]}
          >
            <select
              aria-invalid={false}
              className="MuiNativeSelect-root-1 MuiNativeSelect-select-2 MuiInputBase-input-80 MuiInput-input-65 MuiInputBase-disabled-72 MuiInput-disabled-58 MuiNativeSelect-disabled-6"
              disabled={true}
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value="הכל"
            >
              <option
                value="הכל"
              >
                הכל
              </option>
              <option
                value="ICHILOV"
              >
                איכילוב
              </option>
              <option
                value="BEILINSON"
              >
                בילינסון
              </option>
              <option
                value="HADASA_EIN_KEREM"
              >
                הדסה עין כרם
              </option>
              <option
                value="SOROKA"
              >
                סורוקה
              </option>
              <option
                value="TEL_HASHOMER"
              >
                תל השומר
              </option>
            </select>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-9 MuiNativeSelect-icon-7 MuiNativeSelect-disabled-6"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            className="MuiFormHelperText-root-12 MuiFormHelperText-filled-18"
          />
        </div>
      </div>
      <div
        className="donationsCard"
      >
        <div
          className="loading"
        >
          <div
            className="lf-player-container"
          >
            <div
              className="dropAnimation"
              id="lottie"
              style={
                Object {
                  "background": "transparent",
                  "margin": "0 auto",
                  "outline": "none",
                  "overflow": "hidden",
                }
              }
            />
          </div>
          <div
            className="loadingText"
          >
            מחפש תורים קרובים...
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Book Donation Screen Has Appointments 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root-29 MuiIconButton-root-0 rightButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-8"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root-9"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root-29 MuiIconButton-root-0 login"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-8"
        >
          <p
            className="login_text"
          >
            כניסה
          </p>
          <img
            alt="התחבר"
            src="profile-icon.svg"
          />
        </span>
      </button>
    </div>
    <div
      className="bookDonationScreen content"
    >
      <div
        className="welcomeBox"
      >
        <div
          className="welcomeTitle"
        >
          <div
            className="name"
          >
            היי
             משה
          </div>
          <div
            className="welcomeText"
          >
            איזה כיף שבאת!
            <br />
            מתי יתאים לך לתרום?
          </div>
        </div>
        <img
          alt="illustration"
          src="home page-illustration.png"
        />
      </div>
      <div
        className="dropdownContainer"
      >
        <div
          className="MuiFormControl-root-31 makeStyles-root-0"
        >
          <label
            className="MuiFormLabel-root-47 MuiInputLabel-root-35 MuiInputLabel-formControl-41 MuiInputLabel-animated-44 MuiInputLabel-shrink-43 MuiFormLabel-filled-52"
            data-shrink={true}
          >
            הצג תורים ב:
          </label>
          <div
            className="MuiInputBase-root-69 MuiInput-root-55 MuiInput-underline-60 dropdown MuiInputBase-formControl-70 MuiInput-formControl-56"
            onClick={[Function]}
          >
            <select
              aria-invalid={false}
              className="MuiNativeSelect-root-1 MuiNativeSelect-select-2 MuiInputBase-input-80 MuiInput-input-65"
              disabled={false}
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value="הכל"
            >
              <option
                value="הכל"
              >
                הכל
              </option>
              <option
                value="ICHILOV"
              >
                איכילוב
              </option>
              <option
                value="BEILINSON"
              >
                בילינסון
              </option>
              <option
                value="HADASA_EIN_KEREM"
              >
                הדסה עין כרם
              </option>
              <option
                value="SOROKA"
              >
                סורוקה
              </option>
              <option
                value="TEL_HASHOMER"
              >
                תל השומר
              </option>
            </select>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-9 MuiNativeSelect-icon-7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            className="MuiFormHelperText-root-12 MuiFormHelperText-filled-18"
          />
        </div>
      </div>
      <div
        className="donationsCard"
      >
        <div
          className="donationDayContainer"
        >
          <div>
            <div
              className="availableAppointmentsTitle"
            >
              תורים פנויים
            </div>
            <div
              className="dayTitle"
            >
              יום שישי, 13/08/2021
            </div>
            <div
              className="hospitalName"
            >
              בילינסון
               
            </div>
            <div
              className="hospitalCard"
            >
              <div>
                <div
                  className="pickerLabel"
                />
                <div
                  className="pickerButtons"
                >
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      12:00
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="hospitalName"
            >
              תל השומר
               
            </div>
            <div
              className="hospitalCard"
            >
              <div>
                <div
                  className="pickerLabel"
                />
                <div
                  className="pickerButtons"
                >
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      12:00
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      12:16
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      12:33
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      12:50
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      13:06
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      13:23
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="donationDayContainer"
        >
          <div>
            <div
              className="availableAppointmentsTitle"
            >
              תורים פנויים
            </div>
            <div
              className="dayTitle"
            >
              יום שבת, 14/08/2021
            </div>
            <div
              className="hospitalName"
            >
              בילינסון
               
            </div>
            <div
              className="hospitalCard"
            >
              <div>
                <div
                  className="pickerLabel"
                />
                <div
                  className="pickerButtons"
                >
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      15:46
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="hospitalName"
            >
              תל השומר
               
            </div>
            <div
              className="hospitalCard"
            >
              <div>
                <div
                  className="pickerLabel"
                />
                <div
                  className="pickerButtons"
                >
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      16:36
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      16:53
                    </div>
                  </div>
                  <div
                    className="pickerButtonContainer"
                  >
                    <div
                      className="pickerButton"
                      color="default"
                      onClick={[Function]}
                    >
                      17:10
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="noMoreAppointments"
        >
          <img
            alt="No more appointments"
            className="noAppointmentsImage"
            src="NO Appointments.svg"
          />
          <div>
            זה הכל בינתיים :)
          </div>
          <div>
            התורים מתעדכנים מדי יום אז מומלץ לחזור שוב מחר לבדוק מה התחדש
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Book Donation Screen No Appointments 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="component"
  >
    <div
      className="appHeader"
    >
      <button
        className="MuiButtonBase-root-29 MuiIconButton-root-0 rightButton"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-8"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root-9"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
      </button>
      <div
        className="title"
      >
        <img
          alt="Blood Bank"
          className="logoImage"
          src="blood-bank-zichron-Little-logo.svg"
        />
         🛠
      </div>
      <button
        className="MuiButtonBase-root-29 MuiIconButton-root-0 login"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label-8"
        >
          <p
            className="login_text"
          >
            כניסה
          </p>
          <img
            alt="התחבר"
            src="profile-icon.svg"
          />
        </span>
      </button>
    </div>
    <div
      className="bookDonationScreen content"
    >
      <div
        className="welcomeBox"
      >
        <div
          className="welcomeTitle"
        >
          <div
            className="name"
          >
            היי
             משה
          </div>
          <div
            className="welcomeText"
          >
            איזה כיף שבאת!
            <br />
            מתי יתאים לך לתרום?
          </div>
        </div>
        <img
          alt="illustration"
          src="home page-illustration.png"
        />
      </div>
      <div
        className="dropdownContainer"
      >
        <div
          className="MuiFormControl-root-31 makeStyles-root-0"
        >
          <label
            className="MuiFormLabel-root-47 MuiInputLabel-root-35 MuiInputLabel-formControl-41 MuiInputLabel-animated-44 MuiInputLabel-shrink-43 MuiFormLabel-filled-52"
            data-shrink={true}
          >
            הצג תורים ב:
          </label>
          <div
            className="MuiInputBase-root-69 MuiInput-root-55 MuiInput-underline-60 dropdown MuiInputBase-formControl-70 MuiInput-formControl-56"
            onClick={[Function]}
          >
            <select
              aria-invalid={false}
              className="MuiNativeSelect-root-1 MuiNativeSelect-select-2 MuiInputBase-input-80 MuiInput-input-65"
              disabled={false}
              onAnimationStart={[Function]}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              value="הכל"
            >
              <option
                value="הכל"
              >
                הכל
              </option>
              <option
                value="ICHILOV"
              >
                איכילוב
              </option>
              <option
                value="BEILINSON"
              >
                בילינסון
              </option>
              <option
                value="HADASA_EIN_KEREM"
              >
                הדסה עין כרם
              </option>
              <option
                value="SOROKA"
              >
                סורוקה
              </option>
              <option
                value="TEL_HASHOMER"
              >
                תל השומר
              </option>
            </select>
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-9 MuiNativeSelect-icon-7"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
          <p
            className="MuiFormHelperText-root-12 MuiFormHelperText-filled-18"
          />
        </div>
      </div>
      <div
        className="donationsCard"
      >
        <div
          className="noAppointments"
        >
          <img
            alt="No more appointments"
            className="noAppointmentsImage"
            src="NO Appointments.svg"
          />
          <div>
            לא קיימים תורים פנויים בקרוב
          </div>
          <div>
            מומלץ לחזור שוב מחר לבדוק מה התחדש :)
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
